Renamed recursive filter whatever to average_filter

--- a/recursive_filters.ipynb
+++ b/recursive_filters.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "5b79ba3f",
    "metadata": {},
    "outputs": [
@@ -16,15 +16,16 @@
    ],
    "source": [
     "# recursive expression for the average\n",
-    "def recursive_expression_for_average(prev_avg, new_data_point, k):\n",
-    "    return ((k - 1) / k) * prev_avg + (1 / k) * new_data_point\n",
+    "def average_filter(prev_avg, new_data_point, k):\n",
+    "    alpha = (1 - 1/k)\n",
+    "    return alpha * prev_avg + (1 - alpha) * new_data_point\n",
     "\n",
     "# example: average x = [10, 20, 30]\n",
     "x = [10, 20, 30]\n",
     "running_avg = 0\n",
     "k = 1\n",
     "for i in range(len(x)):\n",
-    "    running_avg = recursive_expression_for_average(running_avg, x[i], k)\n",
+    "    running_avg = average_filter(running_avg, x[i], k)\n",
     "    k += 1\n",
     "\n",
     "print(running_avg)"
